--- a/GerenciadorCantina/src/menu/TelaGerenciadorCantina.form
+++ b/GerenciadorCantina/src/menu/TelaGerenciadorCantina.form
@@ -81,7 +81,7 @@
         <Property name="foreground" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
           <Color blue="ff" green="0" id="blue" palette="1" red="0" type="palette"/>
         </Property>
-        <Property name="text" type="java.lang.String" value="Bem-vindo!"/>
+        <Property name="text" type="java.lang.String" value="Bem-vindx!"/>
       </Properties>
     </Component>
   </SubComponents>
