--- a/src/menu/TelaGerenciadorCantina.form
+++ b/src/menu/TelaGerenciadorCantina.form
@@ -60,6 +60,9 @@
         <Property name="text" type="java.lang.String" value="&lt;html&gt;&#xa;        An&#xe1;lise de Sistema &lt;br /&gt;&#xa;        de Produ&#xe7;&#xe3;o da Uva&#xa;&lt;/html&gt;"/>
         <Property name="enabled" type="boolean" value="false"/>
       </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jToggleButton1ActionPerformed"/>
+      </Events>
     </Component>
     <Component class="javax.swing.JToggleButton" name="jToggleButton3">
       <Properties>
