--- a/src/menu/analise_sist_elab_vinho_e_derivados/elaboracao/recepcao/TelaListagemFornecedor.form
+++ b/src/menu/analise_sist_elab_vinho_e_derivados/elaboracao/recepcao/TelaListagemFornecedor.form
@@ -34,6 +34,8 @@
               <Group type="103" groupAlignment="0" attributes="0">
                   <Group type="102" attributes="0">
                       <EmptySpace max="32767" attributes="0"/>
+                      <Component id="jButtonExportarTabela" min="-2" max="-2" attributes="0"/>
+                      <EmptySpace type="separate" max="-2" attributes="0"/>
                       <Component id="jButton2" min="-2" max="-2" attributes="0"/>
                       <EmptySpace type="unrelated" max="-2" attributes="0"/>
                       <Component id="jButtonVisualizar" min="-2" max="-2" attributes="0"/>
@@ -75,6 +77,7 @@
                   <Component id="jButton3" alignment="3" min="-2" max="-2" attributes="0"/>
                   <Component id="jButton4" alignment="3" min="-2" max="-2" attributes="0"/>
                   <Component id="jButtonVisualizar" alignment="3" min="-2" max="-2" attributes="0"/>
+                  <Component id="jButtonExportarTabela" alignment="3" min="-2" max="-2" attributes="0"/>
               </Group>
               <EmptySpace max="-2" attributes="0"/>
               <Component id="jScrollPane1" pref="447" max="32767" attributes="0"/>
@@ -133,23 +136,43 @@
 
       <Layout class="org.netbeans.modules.form.compat2.layouts.support.JScrollPaneSupportLayout"/>
       <SubComponents>
-        <Component class="javax.swing.JTable" name="jTable1">
+        <Component class="javax.swing.JTable" name="jTableFornecedores">
           <Properties>
             <Property name="model" type="javax.swing.table.TableModel" editor="org.netbeans.modules.form.editors2.TableModelEditor">
               <Table columnCount="11" rowCount="1">
-                <Column editable="false" title="C&#xf3;digo" type="java.lang.Object">
+                <Column editable="true" title="C&#xf3;digo" type="java.lang.Object">
                   <Data value="1"/>
                 </Column>
-                <Column editable="false" title="Raz&#xe3;o Social / Propriedade" type="java.lang.Object"/>
-                <Column editable="false" title="Nome" type="java.lang.Object"/>
-                <Column editable="false" title="Endere&#xe7;o" type="java.lang.Object"/>
-                <Column editable="false" title="Bairro" type="java.lang.Object"/>
-                <Column editable="false" title="Cidade" type="java.lang.Object"/>
-                <Column editable="false" title="Estado" type="java.lang.Object"/>
-                <Column editable="false" title="CEP" type="java.lang.Object"/>
-                <Column editable="false" title="Telefone" type="java.lang.Object"/>
-                <Column editable="false" title="E-mail" type="java.lang.Object"/>
-                <Column editable="true" title="Anota&#xe7;&#xf5;es" type="java.lang.Object"/>
+                <Column editable="true" title="Raz&#xe3;o Social / Propriedade" type="java.lang.Object">
+                  <Data value="Aurora"/>
+                </Column>
+                <Column editable="true" title="Nome" type="java.lang.Object">
+                  <Data value="Aurora"/>
+                </Column>
+                <Column editable="true" title="Logradouro" type="java.lang.Object">
+                  <Data value="Rua Olavo Bilac"/>
+                </Column>
+                <Column editable="true" title="Bairro" type="java.lang.Object">
+                  <Data value="Cidade Alta"/>
+                </Column>
+                <Column editable="true" title="Cidade" type="java.lang.Object">
+                  <Data value="Bento Gon&#xe7;alves"/>
+                </Column>
+                <Column editable="true" title="Estado" type="java.lang.Object">
+                  <Data value="RS"/>
+                </Column>
+                <Column editable="true" title="CEP" type="java.lang.Object">
+                  <Data value="95700-000 "/>
+                </Column>
+                <Column editable="true" title="Telefone" type="java.lang.Object">
+                  <Data value=" (54) 3455-2000"/>
+                </Column>
+                <Column editable="true" title="E-mail" type="java.lang.Object">
+                  <Data value="sac@vinicolaaurora.com.br"/>
+                </Column>
+                <Column editable="true" title="Anota&#xe7;&#xf5;es" type="java.lang.Object">
+                  <Data value="Link do nosso site: http://www.vinicolaaurora.com.br/br"/>
+                </Column>
               </Table>
             </Property>
             <Property name="columnModel" type="javax.swing.table.TableColumnModel" editor="org.netbeans.modules.form.editors2.TableColumnModelEditor">
@@ -218,5 +241,13 @@
         </Component>
       </SubComponents>
     </Container>
+    <Component class="javax.swing.JButton" name="jButtonExportarTabela">
+      <Properties>
+        <Property name="text" type="java.lang.String" value="Exportar tabela"/>
+      </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jButtonExportarTabelaActionPerformed"/>
+      </Events>
+    </Component>
   </SubComponents>
 </Form>
