--- a/src/menu/analise_sist_elab_vinho_e_derivados/elaboracao/recepcao/TelaCadastroFornecedor.form
+++ b/src/menu/analise_sist_elab_vinho_e_derivados/elaboracao/recepcao/TelaCadastroFornecedor.form
@@ -34,7 +34,7 @@
                                   <Component id="jLabel8" alignment="0" min="-2" max="-2" attributes="0"/>
                                   <Group type="103" alignment="0" groupAlignment="1" max="-2" attributes="0">
                                       <Component id="jTextField2" alignment="0" max="32767" attributes="0"/>
-                                      <Component id="jFormattedTextField1" alignment="0" pref="186" max="32767" attributes="0"/>
+                                      <Component id="jFormattedTextFieldCep" alignment="0" pref="186" max="32767" attributes="0"/>
                                       <Component id="jTextField1" alignment="0" pref="186" max="32767" attributes="0"/>
                                       <Component id="jLabel9" alignment="0" min="-2" pref="37" max="-2" attributes="0"/>
                                       <Component id="jComboBox3" alignment="0" pref="186" max="32767" attributes="0"/>
@@ -113,7 +113,7 @@
                                       <Component id="jLabel9" min="-2" max="-2" attributes="0"/>
                                       <EmptySpace max="-2" attributes="0"/>
                                       <Group type="103" groupAlignment="0" attributes="0">
-                                          <Component id="jFormattedTextField1" alignment="1" min="-2" max="-2" attributes="0"/>
+                                          <Component id="jFormattedTextFieldCep" alignment="1" min="-2" max="-2" attributes="0"/>
                                           <Group type="103" alignment="1" groupAlignment="3" attributes="0">
                                               <Component id="jTextField4" alignment="3" min="-2" max="-2" attributes="0"/>
                                               <Component id="jFormattedTextField4" alignment="3" min="-2" max="-2" attributes="0"/>
@@ -261,12 +261,15 @@
         <AuxValue name="JavaCodeGenerator_TypeParameters" type="java.lang.String" value="&lt;String&gt;"/>
       </AuxValues>
     </Component>
-    <Component class="javax.swing.JFormattedTextField" name="jFormattedTextField1">
+    <Component class="javax.swing.JFormattedTextField" name="jFormattedTextFieldCep">
       <Properties>
         <Property name="formatterFactory" type="javax.swing.JFormattedTextField$AbstractFormatterFactory" editor="org.netbeans.modules.form.editors.AbstractFormatterFactoryEditor" preCode="try {" postCode="} catch (java.text.ParseException ex) {&#xa;ex.printStackTrace();&#xa;}">
           <Format format="#####-###" subtype="-1" type="5"/>
         </Property>
       </Properties>
+      <Events>
+        <EventHandler event="focusLost" listener="java.awt.event.FocusListener" parameters="java.awt.event.FocusEvent" handler="jFormattedTextFieldCepFocusLost"/>
+      </Events>
     </Component>
     <Component class="javax.swing.JLabel" name="jLabel8">
       <Properties>
