--- a/src/menu/analise_sist_elab_vinho_e_derivados/elaboracao/recepcao/TelaListagemFornecedor.form
+++ b/src/menu/analise_sist_elab_vinho_e_derivados/elaboracao/recepcao/TelaListagemFornecedor.form
@@ -35,7 +35,7 @@
                   <Group type="102" attributes="0">
                       <EmptySpace max="32767" attributes="0"/>
                       <Component id="jButtonExportarTabela" min="-2" max="-2" attributes="0"/>
-                      <EmptySpace type="separate" max="-2" attributes="0"/>
+                      <EmptySpace type="unrelated" max="-2" attributes="0"/>
                       <Component id="jButton2" min="-2" max="-2" attributes="0"/>
                       <EmptySpace type="unrelated" max="-2" attributes="0"/>
                       <Component id="jButtonVisualizar" min="-2" max="-2" attributes="0"/>
