--- a/src/menu/analise_sist_elab_vinho_e_derivados/TelaAnaliseSistElabVinhoEDerivados.form
+++ b/src/menu/analise_sist_elab_vinho_e_derivados/TelaAnaliseSistElabVinhoEDerivados.form
@@ -17,6 +17,7 @@
                 <MenuItem class="javax.swing.JMenuItem" name="jMenuItem2">
                   <Properties>
                     <Property name="text" type="java.lang.String" value="ID Geral de Uva"/>
+                    <Property name="enabled" type="boolean" value="false"/>
                   </Properties>
                   <Events>
                     <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jMenuItem2ActionPerformed"/>
